@@ -1,5 +1,10 @@
 2009-12-08  Miguel Sofer  <msofer@users.sf.net>
 
+	* generic/tclBasic.c:   Partial nre-enabling of coroutines.
+	* generic/tclExecute.c: The initial call still requires its
+	* generic/tclInt.h:     own instance of tebc, but on resume coros
+	can execute in the caller's tebc.
+
 	* generic/tclExecute.c (TEBC): silence warning about pcAdjustment
 
 2009-12-08  Donal K. Fellows  <dkf@users.sf.net>
